Private Key writing to file